<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".fragments.AddPropertyDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_property_type_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/lbl_property_type"
                android:textAllCaps="true"
                android:textColor="@color/color_8d8d8d"
                android:textSize="@dimen/dimen_15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"

                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_rent"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_property_type_head" />

            <TextView
                android:id="@+id/lbl_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_sell"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/lbl_rent"
                app:layout_constraintStart_toEndOf="@id/lbl_rent"
                app:layout_constraintTop_toTopOf="@id/lbl_rent"
                tools:backgroundTint="@color/primary" />

            <TextView
                android:id="@+id/tv_bedrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/lbl_bedrooms"
                android:textAllCaps="true"
                android:textSize="@dimen/dimen_15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_rent" />

            <TextView
                android:id="@+id/tv_one_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/tv_two_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bedrooms" />

            <TextView
                android:id="@+id/tv_two_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_2"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_one_room"
                app:layout_constraintEnd_toStartOf="@+id/tv_three_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_one_room"
                app:layout_constraintTop_toTopOf="@id/tv_one_room" />

            <TextView
                android:id="@+id/tv_three_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_3"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_one_room"
                app:layout_constraintEnd_toStartOf="@+id/tv_four_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_two_room"
                app:layout_constraintTop_toTopOf="@id/tv_one_room"
                tools:backgroundTint="@color/primary" />

            <TextView
                android:id="@+id/tv_four_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_4"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_one_room"
                app:layout_constraintEnd_toStartOf="@+id/tv_five_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_three_room"
                app:layout_constraintTop_toTopOf="@id/tv_one_room" />

            <TextView
                android:id="@+id/tv_five_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_one_room"
                app:layout_constraintEnd_toStartOf="@+id/tv_six_room"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_four_room"
                app:layout_constraintTop_toTopOf="@id/tv_one_room" />

            <TextView
                android:id="@+id/tv_six_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey_rounded_corners"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_6"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_one_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_five_room"
                app:layout_constraintTop_toTopOf="@id/tv_one_room" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_property_size"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:boxBackgroundColor="@color/color_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_one_room">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tet_property_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/lbl_built_up_area_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColorHint="@color/color_b0bec5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_property_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:boxBackgroundColor="@color/color_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_property_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tet_property_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/lbl_price_in_lac"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/color_8d8d8d" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_furnish_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/lbl_furnish_type"
                android:textAllCaps="true"
                android:textSize="@dimen/dimen_15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_property_price" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_furnished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_grey_rounded_corner_border"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/lbl_furnished"
                app:layout_constraintEnd_toStartOf="@+id/tv_semi_furnished"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_furnish_type" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_semi_furnished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:background="@drawable/background_grey_rounded_corner_border"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/lbl_semi_furnished"
                app:layout_constraintBottom_toBottomOf="@id/tv_furnished"
                app:layout_constraintEnd_toStartOf="@+id/tv_unfurnished"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_furnished"
                app:layout_constraintTop_toTopOf="@id/tv_furnished" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_unfurnished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:background="@drawable/background_grey_rounded_corner_border"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="@string/lbl_unfurnished"
                app:layout_constraintBottom_toBottomOf="@id/tv_furnished"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_semi_furnished"
                app:layout_constraintTop_toTopOf="@id/tv_furnished" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>